--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hexo-admin",
-  "version": "2.3.14",
+  "name": "lingman-hexo-admin",
+  "version": "2.3.15",
   "description": "Adds an admin section to the hexo server",
   "packageManager": "npm@8.7.0",
   "main": "index.js",
