--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lingman-hexo-admin",
-  "version": "2.3.15",
+  "version": "2.3.16",
   "description": "Adds an admin section to the hexo server",
-  "packageManager": "npm@8.7.0",
+  "packageManager": "pnpm@7.18.1",
   "main": "index.js",
   "scripts": {
     "prepublish": "gulp build",
