--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+    
 
       - name: Set node version to ${{ matrix.node }}
         uses: actions/setup-node@v3
@@ -36,7 +35,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       - name: Install
-        run: pnpm i 
+        run: yarn
 
       - name: Publish
         run: npm publish --registry https://registry.npmjs.org
