--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lingman-hexo-admin",
-  "version": "2.3.17",
+  "version": "2.3.18",
   "description": "Adds an admin section to the hexo server",
-  "packageManager": "pnpm@7.18.1",
+  "packageManager": "yarn@1.22.19",
   "main": "index.js",
   "scripts": {
     "prepublish": "gulp build",
